tests/fail/invalid_instance_method.stderr
error: expected `,`
 --> tests/fail/invalid_instance_method.rs:8:20
  |
8 |     #[decorate(self.invalid..method)] // Invalid syntax
  |                    ^
